--- a/portfolio.html
+++ b/portfolio.html
@@ -6,172 +6,207 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebStudio</title>
-  <link rel="stylesheet" href="./css/modern-normalize.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="./css/styles.css" />
+
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
-<body class="page">
+<body>
   <header class="page-header">
-    <div class="c-page-header container">
-      <nav class="c-site-nav">
-        <a href="./index.html" class="logo-header"><span class="blue">Web</span>Studio</a>
+    <div class="container main-container">
+      <nav class="main-nav">
+        <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
+
         <ul class="site-nav list">
-          <li class="c-li"><a href="./index.html" class="link">Студия</a></li>
-          <li class="c-li"><a href="./portfolio.html" class="active">Портфолио</a></li>
-          <li class="last-li"><a href="" class="link">Контакты</a></li>
+          <li class="item"><a href="./index.html" class="nav-link">Студия</a></li>
+          <li class="item"><a href="" class="nav-link current">Портфолио</a></li>
+          <li class="item"><a href="./contact.html" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul class="contacts list">
-        <li class="firs-li">
-          <a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+      <ul class="contact-nav list">
+        <li class="item">
+          <div class="icon-envelope">
+            <a href="mailto:info@devstudio.com" class="contact-link">
+              <svg width="16" height="12" class="svg-envelope">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a>
+          </div>
         </li>
-        <li>
-          <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
+        <li class="item">
+          <div class="icon-smartphone">
+            <a href="tel:+380961111111" class="contact-link">
+              <svg width="10" height="16" class="svg-smartphone">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a>
+          </div>
         </li>
       </ul>
     </div>
   </header>
 
-
   <main>
-    <section class="section">
+    <section class="portfolio-section">
       <div class="container">
-
-        <ul class="filter list">
-          <li>
-            <button type="button">Все</button>
+        <h1 class="visually-hidden">Наши проекты</h1>
+        <ul class="list list-button">
+          <li class="item">
+            <button type="button" class="secondary-button currently-active">Все</button>
           </li>
-          <li>
-            <button type="button">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button">Приложения</button>
-          </li>
-          <li>
-            <button type="button">Дизайн</button>
-          </li>
-          <li class="last">
-            <button type="button">Маркетинг</button>
-          </li>
+          <li class="item"><button type="button" class="secondary-button">Веб-сайты</button></li>
+          <li class="item"><button type="button" class="secondary-button">Приложения</button></li>
+          <li class="item"><button type="button" class="secondary-button">Дизайн</button></li>
+          <li class="item"><button type="button" class="secondary-button">Маркетинг</button></li>
         </ul>
 
-        <ul class="portfolio list">
-          <li>
-            <a href="">
-              <img src="./images/portfolio1.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Технокряк</h2>
-                <p class="type-pic">Веб-сайт</p>
+        <ul class="list wrap-list">
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project1.jpg" alt="Технокряк" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Технокряк</h2>
+                <p class="project-text">Веб-сайт</p>
               </div>
-
             </a>
           </li>
-          <li>
-            <a href="">
-              <img src="./images/portfolio2.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Постер New Orlean vs Golden Star</h2>
-                <p class="type-pic">Дизайн</p>
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Постер New Orlean vs Golden Star</h2>
+                <p class="project-text">Дизайн</p>
               </div>
-
             </a>
           </li>
-          <li>
-            <a href="">
-              <img src="./images/portfolio3.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Ресторан Seafood</h2>
-                <p class="type-pic">Приложение</p>
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project3.jpg" alt="Ресторан Seafood" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Ресторан Seafood</h2>
+                <p class="project-text">Приложение</p>
               </div>
-
             </a>
           </li>
-          <li>
-            <a href="">
-              <img src="./images/portfolio4.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Проект Prime</h2>
-                <p class="type-pic">Маркетинг</p>
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project4.jpg" alt="Проект Prime" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Проект Prime</h2>
+                <p class="project-text">Маркетинг</p>
               </div>
-
             </a>
           </li>
-          <li>
-            <a href="">
-              <img src="./images/portfolio5.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Проект Boxes</h2>
-                <p class="type-pic">Приложение</p>
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project5.jpg" alt="Проект Boxes" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Проект Boxes</h2>
+                <p class="project-text">Приложение</p>
               </div>
-
             </a>
           </li>
-          <li>
-            <a href="">
-              <img src="./images/portfolio6.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Inspiration has no Borders</h2>
-                <p class="type-pic">Веб-сайт</p>
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Inspiration has no Borders</h2>
+                <p class="project-text">Веб-сайт</p>
               </div>
-
             </a>
           </li>
-          <li>
-            <a href="">
-              <img src="./images/portfolio7.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Издание Limited Edition</h2>
-                <p class="type-pic">Дизайн</p>
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project7.jpg" alt="Издание Limited Edition" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Издание Limited Edition</h2>
+                <p class="project-text">Дизайн</p>
               </div>
-
             </a>
           </li>
-          <li>
-            <a href="">
-              <img src="./images/portfolio8.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Проект LAB</h2>
-                <p class="type-pic">Маркетинг</p>
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project8.jpg" alt="Проект LAB" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Проект LAB</h2>
+                <p class="project-text">Маркетинг</p>
               </div>
-
             </a>
           </li>
-          <li>
-            <a href="">
-              <img src="./images/portfolio9.jpg" alt="Пример работы" width="370" />
-              <div class="card-text">
-                <h2 class="name-pic">Growing Business</h2>
-                <p class="type-pic">Приложение</p>
+          <li class="wrap-element">
+            <a href="" class="link-wrap-element">
+              <img class="footer-img" src="./images/project9.jpg" alt="Growing Business" width="370" />
+              <div class="projects-description">
+                <h2 class="project-tittle">Growing Business</h2>
+                <p class="project-text">Приложение</p>
               </div>
-
             </a>
           </li>
         </ul>
       </div>
     </section>
-
-
   </main>
 
-  <footer>
-    <div class="container"><a href="./index.html" class="logo"><span class="blue">Web</span><span
-          class="white">Studio</span></a>
-      <address>
-        <ul class="contacts-foot list">
-          <li class="first">
-            <a href="https://goo.gl/maps/m5HyGAgMdNyjbcnx7" class="address">г. Киев, пр-т Леси Украинки, 26</a>
+  <footer class="footer">
+    <div class="container container-footer">
+      <div class="first-footer-flex-container">
+        <div class="footer-logo-container">
+          <a href="" class="logo">Web<span class="accent">Studio</span></a>
+          <address>
+            <ul class="footer-contact list">
+              <li class="footer-contact-item">
+                <a href="" class="footer-nav-address">г. Киев, пр-т Леси Украинки, 26</a>
+              </li>
+              <li class="footer-contact-item">
+                <a href="mailto:info@example.com" class="contact-link">info@example.com</a>
+              </li>
+              <li class="footer-contact-item">
+                <a href="tel:+380991111111" class="contact-link">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
+
+      <div class="second-footer-flex-container">
+        <h2 class="feature-tittle">Присоединяйтесь</h2>
+        <ul class="footer-network-items">
+          <li class="list">
+            <a href="https://www.instagram.com/" class="link-instagram">
+              <svg width="20" height="20" class="svg-inst">
+                <use href="./images/icons.svg#icon-instagram2"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="mailto:info@example.com" class="contacts">info@info.com</a>
+          <li class="list">
+            <a href="https://twitter.com/" class="link-twitter">
+              <svg width="20" height="20" class="svg-twitter">
+                <use href="./images/icons.svg#icon-twitter2"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a>
+          <li class="list">
+            <a href="https://uk-ua.facebook.com/" class="link-facebook">
+              <svg width="20" height="20" class="svg-facebook">
+                <use href="./images/icons.svg#icon-facebook2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list">
+            <a href="https://ru.linkedin.com/" class="link-linkedin">
+              <svg width="20" height="20" class="svg-linkedin">
+                <use href="./images/icons.svg#icon-linkedin2"></use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
